# Linguistic-AI-Infra-Dataset

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: python-quality.yml
Standard_Dataset/: metadata.json  standard_dataset.jsonl
Standard_Dataset/by_language/: Arabic_阿拉伯语.jsonl  Chinese_中文.jsonl  Danish_丹麦语.jsonl  Dutch_荷兰语.jsonl  English_英语.jsonl  French_法语.jsonl  German_德语.jsonl  Hebrew_希伯来语.jsonl  Hindi_印地语.jsonl  Hungarian_匈牙利语.jsonl  Italian_意大利语.jsonl  Japanese_日语.jsonl  Korean_韩语.jsonl  Portuguese_葡萄牙语.jsonl  Russian_俄语.jsonl  Spanish_西班牙语.jsonl  Swedish_瑞典语.jsonl  Thai_泰语.jsonl
Target_Conllus/Chinese_中文/: zh_patentchar-ud-test.conllu
Target_Conllus/Dutch_荷兰语/: nl_alpino-ud-test.conllu  nl_lassysmall-ud-test.conllu
Target_Conllus/English_英语/: en_atis-ud-test.conllu  en_ctetex-ud-test.conllu  en_gentle-ud-test.conllu  en_gumreddit-ud-test.conllu  en_lines-ud-test.conllu  en_littleprince-ud-test.conllu  en_partut-ud-test.conllu  en_pronouns-ud-test.conllu
Target_Conllus/French_法语/: fr_alts-ud-test.conllu  fr_fqb-ud-test.conllu  fr_gsd-ud-test.conllu  fr_parisstories-ud-test.conllu  fr_poitevindivital-ud-test.conllu  fr_pud-ud-test.conllu  fr_rhapsodie-ud-test.conllu  fr_sequoia-ud-test.conllu
Target_Conllus/Hebrew_希伯来语/: he_iahltknesset-ud-test.conllu  he_iahltwiki-ud-test.conllu  he_postrab-ud-test.conllu
Target_Conllus/Hindi_印地语/: hi_convers-ud-test.conllu
Target_Conllus/Italian_意大利语/: it_kiparlaforest-ud-test.conllu  (+2 more)
docs/: ARCHITECTURE.md  ROADMAP.md
scripts/: build_standard_dataset.py
tests/: test_evaluation.py
(+17 files in other folders)
